src/test/deca/context/valid/objet/variable-cast-extends.deca
// Description:
//    Cast d'une classe vers une autre qui n'est pas une sous-classe
//
// Resultats:
//    Ligne 20: B n'est pas une sous classe de A
//
// Historique:
//    cree le 06/01/2023

class A{
    int x;
}

class B extends A{
    int x;
}

{
    A a = new A();
    a.x;
    (B)(a).x;
}