src/test/deca/context/invalid/selection-not-on-class.deca
// Description:
//    Selection sur une variable qui n'est pas de type class 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 16: The object of the selection is not of type class (rule 3.65)
//
// Historique:
//    cree le 16/01/2023

{
    int a;
    a.x;
}